# livekit-gemini

./: .gitignore  start-dev.bat
agent/: audio_server.py  interview_prompts.py  main.py  pyproject.toml  transcripts.db
web/: .eslintrc.json  .gitignore  package.json  pnpm-lock.yaml  tsconfig.json  tsr.config.json  vite.config.ts
web/messages/: ar.json  de.json  en.json  he.json  ru.json
web/prisma/: schema.prisma
web/project.inlang/: settings.json
web/src/: routeTree.gen.ts  router.tsx  vite-env.d.ts
web/src/app/: __root.tsx  globals.css  index.tsx  layout.tsx  page.tsx
web/src/components/: auth.tsx  chat.tsx  configuration-form.tsx  gemini.tsx  lk.tsx  locale-switcher.tsx  modalities-selector.tsx  nano-banana-feed.tsx  posthog-pageview.tsx  transcript.tsx  typewriter.tsx
web/src/contexts/: preflight-context.tsx
web/src/data/: interview-options.ts
web/src/hooks/: posthog-provider.tsx  use-agent.tsx  use-audio-playback.ts  use-conversation-state.ts  use-interviews.ts  use-preflight-audio.ts  use-speech-coaching-analysis.ts
web/src/lib/: content-hash.ts  csrf-client.ts  csrf-constants.ts  csrf.ts  interview-option-labels.ts  interview-status-label.ts  prisma.ts  react-query.tsx  speech-coaching-audio.ts  speech-coaching-chunk-buffer.ts  speech-coaching-constants.ts  speech-coaching-context.ts  speech-coaching-ui.ts
web/src/providers/: iframe-bridge-provider.tsx
web/src/server/: speech-coaching-openrouter.ts
web/src/src/: routeTree.gen.ts
web/src/types/: conversation.ts  interview.ts  question-bank.ts  speech-coaching.ts
(+71 files in other folders)
