[project]
name = "gemini-agent"
version = "0.1.0"
description = "LiveKit Agent for Gemini Playground"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "livekit>=0.19.0",
    "livekit-agents[simli]~=1.4",
    "livekit-plugins-google>=1.3.5",
    "livekit-plugins-silero>=1.3.5",
    "python-dotenv",
    "google-genai>=1.47.0",
    "Pillow>=12.0.0",
    "packaging>=21.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "boto3>=1.34.0",
]

